mudei as cores, coloquei header, menu a mudei o tamanho no mobile

--- a/styles.css
+++ b/styles.css
@@ -4,8 +4,21 @@ html {
 
 body {
     height: 100vh;
-    background-color: rgb(11, 14, 20);
+    background-color: #0d1117;
     color: white;
+    font-family: 'Nunito', sans-serif;
+}
+
+header {
+    text-align: left;
+    padding: 2vh;
+    background-color: rgb(11, 14, 20);
+    display: flex;
+    justify-content: space-between;
+}
+
+h1, h2, h3, h4{
+    font-family: 'Raleway', sans-serif;
 }
 
 * {
@@ -22,7 +35,7 @@ main {
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
-    height: 100vh;
+    height: 90vh;
 }
 
 main > h2 {
@@ -77,9 +90,10 @@ main > h2 {
 
 @media screen and (orientation: portrait) {
     #board {
-        width: 100vw;
-        height: 100vw;
-        border: none;
+        width: 90vw;
+        height: 90vw;
+        border: 0.5vh solid rgb(32, 40, 58);
+        margin: 5vh;
     }
 
     #pieces-move {
@@ -119,4 +133,61 @@ main > h2 {
     #f1, #f2, #f3, #f4, #f5, #f6, #f7, #f8 { right: 25vw;   }
     #g1, #g2, #g3, #g4, #g5, #g6, #g7, #g8 { right: 12.5vw; }
     #h1, #h2, #h3, #h4, #h5, #h6, #h7, #h8 { right: 0;      }
+}
+
+.container {
+    margin: 1vh;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#checkbox-menu {
+    position: absolute;
+    opacity: 0;
+}
+
+label {
+    cursor: pointer;
+    position: relative;
+    display: block;
+    height: 22px;
+    width: 30px;
+}
+
+label span {
+    position: absolute;
+    display: block;
+    height: 5px;
+    width: 2em;
+    border-radius: 30px;
+    background: white;
+    transition: 0.25s ease-in-out;
+}
+
+label span:nth-child(1) {
+    top: 0;
+}
+
+label span:nth-child(2) {
+    top: 8px;
+}
+
+label span:nth-child(3) {
+    top: 16px;
+}
+
+#checkbox-menu:checked+label span:nth-child(1) {
+    transform: rotate(-45deg);
+    top: 8px;
+}
+
+#checkbox-menu:checked+label span:nth-child(2) {
+    opacity: 0;
+}
+
+#checkbox-menu:checked+label span:nth-child(3) {
+    transform: rotate(45deg);
+    top: 8px;
 }
