--- a/styles.css
+++ b/styles.css
@@ -58,6 +58,10 @@ main > h2 {
     height: 60vh;
 }
 
+#pieces-move div img {
+    height: 7.5vh;
+}
+
 #a1, #b1, #c1, #d1, #e1, #f1, #g1, #h1,
 #a2, #b2, #c2, #d2, #e2, #f2, #g2, #h2,
 #a3, #b3, #c3, #d3, #e3, #f3, #g3, #h3,
@@ -133,6 +137,10 @@ main > h2 {
     #f1, #f2, #f3, #f4, #f5, #f6, #f7, #f8 { right: 22.5vw;  }
     #g1, #g2, #g3, #g4, #g5, #g6, #g7, #g8 { right: 11.25vw; }
     #h1, #h2, #h3, #h4, #h5, #h6, #h7, #h8 { right: 0;       }
+
+    #pieces-move div img {
+        height: 11.25vw;
+    }
 }
 
 .container {
