--- a/styles.css
+++ b/styles.css
@@ -180,15 +180,11 @@ label span {
 }
 
 label span:nth-child(1) {
-    top: 0;
+    top: 0.5;
 }
 
 label span:nth-child(2) {
-    top: 1.01vh;
-}
-
-label span:nth-child(3) {
-    top: 2.02vh;
+    top: 1.5vh;
 }
 
 #checkbox-menu:checked+label span:nth-child(1) {
@@ -197,10 +193,6 @@ label span:nth-child(3) {
 }
 
 #checkbox-menu:checked+label span:nth-child(2) {
-    opacity: 0;
-}
-
-#checkbox-menu:checked+label span:nth-child(3) {
     transform: rotate(45deg);
     top: 1.01vh;
 }
@@ -238,3 +230,24 @@ nav {
 .aberto {
     right: 0;
 }
+/*estilização da janela de configurações, incompleta*/
+#pop-up-configuracoes {
+    display: none;
+}
+
+.ativado #pop-up-configuracoes{
+    position: fixed;
+    display: flex;
+    height: 100vh;
+    width: 100vw;
+    align-items: center;
+    justify-content: center;
+    z-index: 3;
+}
+
+#configuracoes {
+    height: 30rem;
+    width: 40rem;
+    background-color: #02050c;
+}
+/*-----------------------------------*/
