As peças agora se movem desordenadamente

--- a/styles.css
+++ b/styles.css
@@ -63,8 +63,14 @@ main > h2 {
     height: 60vh;
 }
 
-#pieces-move div img {
+.piece {
+    position: absolute;
+    cursor: grab;
     height: 7.5vh;
+}
+
+.grabed {
+    opacity: 0;
 }
 
 #a1, #b1, #c1, #d1, #e1, #f1, #g1, #h1,
