--- a/styles.css
+++ b/styles.css
@@ -146,9 +146,15 @@ main > h2 {
     #pieces-move div img {
         height: 11.25vw;
     }
+
+    #configuracoes-janela {
+        height: 29vh;
+        width: 40vh;
+    }
 }
 
 .container {
+    z-index: 100;
     margin: 1vh;
     height: 100%;
     display: flex;
@@ -225,29 +231,77 @@ nav {
     display: flex;
     justify-content: center;
     align-items: center;
+    cursor: pointer;
 }
 
 .aberto {
     right: 0;
 }
 /*estilização da janela de configurações, incompleta*/
-#pop-up-configuracoes {
+.pop-up-configuracoes-fechado {
     display: none;
 }
 
-.ativado #pop-up-configuracoes{
+.pop-up-configuracoes-aberto {
     position: fixed;
     display: flex;
     height: 100vh;
     width: 100vw;
     align-items: center;
     justify-content: center;
-    z-index: 3;
+    z-index: 4;
 }
 
-#configuracoes {
-    height: 30rem;
-    width: 40rem;
+#configuracoes-janela {
+    height: 38vh;
+    width: 70vh;
     background-color: #02050c;
+    border-radius: 1rem;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    padding: 2vh 2vh 0 2vh;
 }
+
+#configuracoes-janela .opcoes{
+    margin: 2rem;
+}
+
+.botoes-cofiguracoes {
+    display: flex;
+    justify-content: space-around;
+    grid-column-start: 1;
+    grid-column-end: 3;
+}
+
+.temas {
+    cursor: pointer;
+    border-radius: 1rem;
+    margin: 1vh;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    color: black;
+}
+
+.temas h2{
+    text-align: center;
+}
+
+#wood {
+    background-image: linear-gradient(to left, rgb(181, 136, 99) 0, rgb(181, 136, 99) 50%, rgb(240, 217, 181) 50%);
+}
+
+#blue {
+    background-image: linear-gradient(to left, rgb(4, 14, 61) 0, rgb(4, 14, 61) 50%, rgb(211, 218, 240) 50%);
+}
+
+#modern {
+    background-image: linear-gradient(to left, rgb(24, 24, 24) 0, rgb(24, 24, 24) 50%, rgb(170, 170, 170) 50%);
+}
+
+#traditional {
+    background-image: linear-gradient(to left, rgb(115, 180, 89) 0, rgb(115, 180, 89) 50%, rgb(233, 227, 219) 50%);
+}
+
 /*-----------------------------------*/
