--- a/styles.css
+++ b/styles.css
@@ -240,6 +240,15 @@ nav {
     cursor: pointer;
 }
 
+.opcoes a:link, a:visited {
+    text-decoration: none;
+    color: #02050c;
+}
+
+.opcoes:hover {
+    background-color: rgb(218, 216, 216);
+}
+
 .aberto {
     right: 0;
 }
@@ -333,8 +342,8 @@ nav {
     height: 4vh;
     width: 37vh;
     border-radius: .75vh;
-    background-color: rgb(65, 62, 62);
     color: white;
+    background-color: rgb(65, 62, 62);
 }
 
 #login input:focus {
@@ -396,3 +405,73 @@ nav {
     bottom: -100vh;
 }
 
+/*-----------------pagina desenvolvedores------------------------*/
+#desenvolvedores-html {
+    overflow-y: auto;
+}
+
+
+#desenvolvedores {
+    display: block;
+    margin: 5vh 30vh 5vh 30vh;
+}
+
+#desenvolvedores section article{
+    padding: 3vh;
+}
+
+.titulos {
+    background-color: #02050c;
+    color: white;
+    border-radius: 1vh;
+    margin: 3vh;
+}
+
+.dev-dados {
+    margin: 0 3vh 0 1vh;
+    border-right: 0.8vh solid #02050c;
+}
+
+.conteudo {
+    border: 1.3vh solid #02050c;
+    margin: 3vh;
+    border-radius: 1vh;
+    padding: 1vh;
+    display: flex;
+    flex-direction: row;
+}
+
+.conteudo h3 {
+    margin: auto 1vh auto 1vh;
+}
+
+.conteudo p {
+    text-align: justify;
+    margin: 0 6vh 0 4vh;
+
+}
+
+.github {
+    font-size: small;
+    margin-left: 1vh;
+}
+
+.github a:visited:hover, .github a:link:hover {
+    text-decoration: underline;
+}
+
+.github a:visited {
+    color: white;
+}
+
+.github a:link {
+    color: white;
+    text-decoration: none;
+}
+
+.conteudo img {
+    height: 20vh;
+    border-radius: 50%;
+    margin: 0 3vh 3vh 0;
+    text-align: left;
+}
