--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,7 @@ header {
     background-color: #02050c;
     display: flex;
     justify-content: space-between;
+    z-index: 2;
 }
 
 header h1 {
@@ -67,6 +68,14 @@ main > h2 {
     position: absolute;
     cursor: grab;
     height: 7.5vh;
+}
+
+.piece-cpy {
+    pointer-events: none;
+    position: absolute;
+    cursor: grabbing;
+    height: 7.5vh;
+    z-index: 1;
 }
 
 .grabed {
